[project]
name = "simpleragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=4.0.0",
    "biopython>=1.87",
    "faiss-cpu>=1.8.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "pydantic>=2.13.4",
    "pypdf>=4.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.58.0",
]
